feat: AI chatbot, group chat, admin panel, and UI improvements