@@ -2,8 +2,6 @@ package com.tripweaver.config;
 
 import com.tripweaver.service.CustomOAuth2UserService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.actuate.autoconfigure.security.servlet.EndpointRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -13,13 +11,12 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.logout.HttpStatusReturningLogoutSuccessHandler;
+import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
 import java.util.Arrays;
-import java.util.List;
+import jakarta.servlet.http.HttpServletResponse;
 
 @Configuration
 @EnableWebSecurity
@@ -31,18 +28,13 @@ public class SecurityConfig {
     @Autowired
     private OAuth2SuccessHandler oAuth2SuccessHandler;
 
-    @Value("${app.frontend.url:http://localhost:3000}")
-    private String frontendUrl;
-
     @Bean
     public BCryptPasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(
-            AuthenticationConfiguration authenticationConfiguration
-    ) throws Exception {
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
         return authenticationConfiguration.getAuthenticationManager();
     }
 
@@ -51,78 +43,77 @@ public class SecurityConfig {
         http
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(AbstractHttpConfigurer::disable)
+            .exceptionHandling(ex -> ex.authenticationEntryPoint(apiEntryPoint()))
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers(EndpointRequest.to("health", "prometheus")).permitAll()
                 .requestMatchers(
                     "/",
                     "/api/auth/**",
-                    "/api/trip/**",
+                    "/api/trips/**",
                     "/api/destination/**",
                     "/api/openai/**",
                     "/api/gemini/**",
                     "/api/chat/**",
                     "/api/photo-legacy",
+                    "/api/search-history/**",
+                    "/api/collaboration-trips/**",
+                    "/api/open-trip-splits/**",
                     "/api/bookings/**",
+                    "/api/profile/**",
                     "/api/payments/**",
                     "/api/checklist/**",
                     "/api/experiences/**",
-                    "/api/profile/**",
-                    "/api/collaboration-trips/**",
-                    "/api/open-trip-splits/**",
+                    "/api/admin/**",
+                    "/oauth2/**",
+                    "/login/**",
                     "/error",
                     "/favicon.ico",
                     "/static/**",
-                    "/webjars/**"
+                    "/webjars/**",
+                    "/actuator/**"
                 ).permitAll()
                 .anyRequest().authenticated()
-            )
-            .logout(logout -> logout
-                .logoutUrl("/api/auth/logout")
-                .logoutSuccessHandler(new HttpStatusReturningLogoutSuccessHandler())
-                .invalidateHttpSession(true)
-                .clearAuthentication(true)
-                .deleteCookies("JSESSIONID")
             )
             .oauth2Login(oauth -> oauth
                 .userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
                 .successHandler(oAuth2SuccessHandler)
+            )
+            .logout(logout -> logout
+                .logoutUrl("/api/auth/logout")
+                .invalidateHttpSession(true)
+                .clearAuthentication(true)
+                .deleteCookies("JSESSIONID")
             );
-
         return http.build();
+    }
+
+    @Bean
+    public AuthenticationEntryPoint apiEntryPoint() {
+        return (request, response, authException) -> {
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            response.setContentType("application/json");
+            response.getWriter().write("{\"message\":\"Unauthorized\"}");
+        };
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-
-        config.setAllowedOrigins(List.of(
+        config.setAllowedOrigins(Arrays.asList(
             "http://localhost:3000",
-            "http://localhost:5173",
             "http://127.0.0.1:3000",
+            "http://localhost:5173",
             "http://127.0.0.1:5173",
-            frontendUrl
+            "https://tripweaver-frontend.vercel.app",
+            "https://tripweaver.duckdns.org"
         ));
-
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept",
+            "X-Requested-With", "Cache-Control", "Origin",
+            "Access-Control-Request-Method", "Access-Control-Request-Headers"));
+        config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type",
+            "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
         config.setAllowCredentials(true);
-
-        config.setAllowedMethods(List.of(
-            "GET",
-            "POST",
-            "PUT",
-            "DELETE",
-            "OPTIONS",
-            "PATCH"
-        ));
-
-        config.setAllowedHeaders(List.of("*"));
-
-        config.setExposedHeaders(List.of(
-            "Authorization",
-            "Content-Type"
-        ));
-
         config.setMaxAge(3600L);
-
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
